clusters/k4/kubernetes/apps/kube-system/cilium/policies/egress/labelled-allow-egress-envoy-internal.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-envoy-internal
spec:
  endpointSelector:
    matchLabels:
      egress.samoth.eu/envoy-internal: allow
  egress:
    - toEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
    - toCIDR:
        - ${SECRET_LB_POOL_IPV4}
        - ${SECRET_LB_POOL_IPV6}
      toPorts:
        - ports:
            - port: "80"
            - port: "443"
