clusters/k4/kubernetes/apps/kube-system/cilium/policies/egress/labelled-allow-egress-internet-cloudflare-doh.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-internet-cloudflare-doh
spec:
  endpointSelector:
    matchLabels:
      egress.samoth.eu/internet-cloudflare-doh: allow
  egress:
    - toCIDR:
        - "1.1.1.1/32"
        - "1.0.0.1/32"
        - "2606:4700:4700::1111/128"
        - "2606:4700:4700::1001/128"
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
            - port: "443"
              protocol: "UDP"
