clusters/k4/kubernetes/apps/kube-system/cilium/policies/egress/labelled-allow-egress-internet-github.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-internet-github
spec:
  endpointSelector:
    matchLabels:
      egress.samoth.eu/internet-github: allow
  egress:
    - toFQDNs:
        - matchPattern: "*.*.*.svc.cluster.local"
        - matchPattern: "*.*.*.*.svc.cluster.local"
        - matchPattern: "*.*.*.*.*.svc.cluster.local"
        - matchPattern: "*.*.*.*.*.*.svc.cluster.local"
        - matchName: "github.com"
        - matchPattern: "*.github.com"
        - matchPattern: "*.github.dev"
        - matchPattern: "*.github.io"
        - matchName: "ghcr.io"
        - matchPattern: "*.ghcr.io"
        - matchPattern: "*.githubusercontent.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
            - port: "443"
              protocol: "UDP"
