clusters/k4/kubernetes/apps/kube-system/cilium/policies/egress/labelled-allow-egress-internet.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-internet
spec:
  endpointSelector:
    matchLabels:
      egress.samoth.eu/internet: allow
  egress:
    - toCIDRSet:
        - cidrGroupRef: internet
