clusters/k4/kubernetes/apps/kube-system/cilium/policies/egress/labelled-allow-egress-kube-apiserver.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-kube-apiserver
spec:
  endpointSelector:
    matchLabels:
      egress.samoth.eu/kube-apiserver: allow
  egress:
    - toEntities:
      - kube-apiserver
      toPorts: &ports
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "6443"
              protocol: UDP
    - toCIDR:
      - ${SECRET_TALOS_VIP_IPV4}/32
      toPorts: *ports
