clusters/k4/kubernetes/apps/kube-system/cilium/policies/egress/labelled-allow-egress-talos-api.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-talos-api
spec:
  endpointSelector:
    matchLabels:
      egress.samoth.eu/talos-api: allow
  egress:
    - toEntities:
      - kube-apiserver
      toPorts:
        - ports:
            - port: "50000"
              protocol: TCP
            - port: "50000"
              protocol: UDP
