clusters/k4/kubernetes/apps/kube-system/cilium/policies/egress/labelled-allow-egress-truenas-https.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-truenas-https
spec:
  endpointSelector:
    matchLabels:
      egress.samoth.eu/truenas-https: allow
  egress:
    - toCIDR:
        - ${SECRET_TRUENAS_CIDR}
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
            - port: "443"
              protocol: "UDP"
